--- a/stylesheet/tictactoe.css
+++ b/stylesheet/tictactoe.css
@@ -26,13 +26,21 @@ body {
 
 .tile {
     float: left;
-    display: table;
     border: 0;
     width: 30%;
     height: 30%;
     margin-left: 3%;
     margin-bottom: 3%;
     background-color: blue;
+}
+
+.tile img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    object-fit: contain;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 #buttons {
