--- a/stylesheet/tictactoe.css
+++ b/stylesheet/tictactoe.css
@@ -36,7 +36,7 @@ body {
 }
 @font-face {
     font-family: "chalktastic";
-    src: url("../fonts/chalktastic.ttf");
+    src: url("../hwgyii.github.io/fonts/chalktastic.ttf");
 }
 
 .tile span {
