--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -1,4 +1,73 @@
-* {
-    border: 0;
-    margin: 0;
+/* GLOBAL STYLES */
+body {
+  background: #333;
+  padding-top: 5em;
+  justify-content: center;
+}
+
+.typewriter {
+  display: flex;
+}
+
+/* DEMO-SPECIFIC STYLES */
+.typewriter h1 {
+  color: #fff;
+  font-family: monospace;
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em; /* Adjust as needed */
+  animation: 
+    typing 4s steps(45, end),
+    blink-caret 0.75s step-end infinite;
+}
+
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange }
+}
+
+
+#video_container {
+	margin: 0px auto;
+	width: 500px;
+	height: 375px;
+  border: 10px #333 solid;
+}
+#videoElement {
+	width: 500px;
+	height: 375px;
+	background-color: #666;
+}
+
+
+#button_container {
+  width: 15vw;
+  height: 10vh;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5vh;
+}
+
+#button_container button {
+  width: 100%;
+  height: 45%;
+  border-radius: 8px;
+  margin-bottom: 5%;
+}
+
+.hide { 
+  display: none;
+}
+
+.show {
+  display: show;
 }
